# TODOS

./: .env  .env.local  .gitignore  alembic.ini  local.db  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_create_users_table.py  002_create_todos_table.py
history/prompts/constitution/: 001-initial-constitution-creation.constitution.prompt.md
history/prompts/phase1-todo-console/: 002-phase1-spec-creation.spec.prompt.md  003-phase1-plan-creation.plan.prompt.md  004-phase1-tasks-creation.tasks.prompt.md  005-phase1-implementation.implement.prompt.md
phase1/: todo.py
phase1/tests/: verification.md
specs/001-phase1-todo-console/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-phase1-todo-console/checklists/: requirements.md
src/: __init__.py  main.py
src/api/: auth.py  deps.py  todos.py
src/app/: globals.css  layout.tsx  page.tsx  root-client.tsx
src/app/(auth)/: layout.tsx
src/app/(dashboard)/: layout.tsx
src/components/: AddTodoForm.tsx  TodoItem.tsx  TodoList.tsx
src/components/ui/: Alert.tsx  Button.tsx  Card.tsx  Input.tsx  (+1 more)
src/core/: config.py  security.py
src/db/: connection.py
src/evolution_of_todo_backend.egg-info/: SOURCES.txt  requires.txt
src/lib/: api.ts  auth.ts  auth.tsx  utils.ts
src/models/: __init__.py  todo.py  user.py
src/schemas/: __init__.py  todo.py  user.py
src/services/: __init__.py  todo_service.py  user_service.py
src/types/: index.ts
tests/: conftest.py
(+4 files in other folders)
